# crudapi_rs

./: Cargo.toml  README.md  docker-compose.yml
config/: default.toml
crudapi-derive/: Cargo.toml
crudapi-derive/src/: lib.rs
src/: main.rs  settings.rs
src/account/: db.rs  service.rs
src/auth/: command.rs  dto.rs  endpoints.rs  mod.rs  service.rs
src/common/: error.rs  response.rs
src/db/: error.rs  mod.rs  repository.rs
