[package]
name = "crudapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crudapi-derive = { path = "crudapi-derive" }
config = "0.11.0"
actix-web = "4.0.0-beta.21"
actix-service = "2.0.2"
async-trait = "0.1.52"
serde = "1.0.136"
serde_json = "1.0.78"
tokio-postgres = { version = "0.7.5", features = ["with-uuid-0_8"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
env_logger = "0.9.0"
log = "0.4.14"
futures-util = "0.3.19"
deadpool = "0.9.2"
deadpool-postgres = "0.10.1"
